--- a/src/main/webapp/vistas/dependencias/Create.xhtml
+++ b/src/main/webapp/vistas/dependencias/Create.xhtml
@@ -7,15 +7,17 @@
 
     <ui:composition>
 
-        <p:dialog id="DependenciasCreateDlg" widgetVar="DependenciasCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateDependenciasTitle}">
+        <p:dialog id="DependenciasCreateDlg" widgetVar="DependenciasCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateDependenciasTitle}" responsive="true">
             <h:form id="DependenciasCreateForm">
                 <h:panelGroup id="display">
-                    <p:panelGrid columns="2" rendered="#{dependenciasController.selected != null}">
+                    <div class="ui-fluid">
+                    <p:panelGrid columns="2" rendered="#{dependenciasController.selected != null}" layout="grid" columnClasses="ui-grid-col-5,ui-grid-col-14" styleClass="ui-panelgrid-blank">
                         <p:outputLabel value="#{bundle.DependenciasLabel_siglas}" for="siglas" />
                         <p:inputText id="siglas" value="#{dependenciasController.selected.siglas}" title="#{bundle.DependenciasTitle_siglas}" required="true" requiredMessage="#{bundle.DependenciasRequiredMessage_siglas}" />
                         <p:outputLabel value="#{bundle.DependenciasLabel_nombre}" for="nombre" />
                         <p:inputText id="nombre" value="#{dependenciasController.selected.nombre}" title="#{bundle.DependenciasTitle_nombre}" required="true" requiredMessage="#{bundle.DependenciasRequiredMessage_nombre}"/>
                     </p:panelGrid>
+                    </div>    
                     <p:commandButton actionListener="#{dependenciasController.create}" value="#{bundle.Save}" update="display,:DependenciasListForm:datalist,:growl" oncomplete="handleSubmit(args,'DependenciasCreateDialog');"/>
                 </h:panelGroup>
             </h:form>
