--- a/src/main/webapp/vistas/dependencias/List.xhtml
+++ b/src/main/webapp/vistas/dependencias/List.xhtml
@@ -16,6 +16,11 @@
         <ui:define name="body">
             <h:form id="DependenciasListForm">
                 <p:panel header="#{bundle.ListDependenciasTitle}">
+                    <p:contextMenu for="datalist">       
+                        <p:menuitem id="createButton"   value="#{bundle.Create}"    icon="ui-icon-plus"     update=":DependenciasCreateForm"    oncomplete="PF('DependenciasCreateDialog').show()" actionListener="#{dependenciasController.prepareCreate}" />
+                        <p:menuitem id="editButton"     value="#{bundle.Edit}"      icon="ui-icon-pencil"   update=":DependenciasEditForm"      oncomplete="PF('DependenciasEditDialog').show()"/>
+                        <p:menuitem id="viewButton"     value="#{bundle.View}"      icon="ui-icon-search"   update=":DependenciasViewForm"      oncomplete="PF('DependenciasViewDialog').show()"/>                       
+                    </p:contextMenu>
                     <p:dataTable id="datalist" value="#{dependenciasController.items}" var="item"
                                  selectionMode="single" selection="#{dependenciasController.selected}"
                                  paginator="true"
@@ -23,10 +28,6 @@
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"
                     >
-
-                        <p:ajax event="rowSelect"   update="createButton viewButton editButton"/>
-                        <p:ajax event="rowUnselect" update="createButton viewButton editButton"/>
-
                         <p:column width="10%">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.DependenciasTitle_iddependencia}"/>
@@ -45,12 +46,6 @@
                             </f:facet>
                             <h:outputText value="#{item.nombre}"/>
                         </p:column>
-                        <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{dependenciasController.prepareCreate}" update=":DependenciasCreateForm" oncomplete="PF('DependenciasCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":DependenciasViewForm" oncomplete="PF('DependenciasViewDialog').show()" disabled="#{empty dependenciasController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":DependenciasEditForm" oncomplete="PF('DependenciasEditDialog').show()" disabled="#{empty dependenciasController.selected}"/>
-                            
-                        </f:facet>
                     </p:dataTable>
                 </p:panel>
             </h:form>
