--- a/src/main/webapp/vistas/instituciones/Edit.xhtml
+++ b/src/main/webapp/vistas/instituciones/Edit.xhtml
@@ -8,10 +8,11 @@
 
     <ui:composition>
 
-        <p:dialog id="InstitucionesEditDlg" widgetVar="InstitucionesEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditInstitucionesTitle}">
+        <p:dialog id="InstitucionesEditDlg" widgetVar="InstitucionesEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditInstitucionesTitle}" responsive="true">
             <h:form id="InstitucionesEditForm">
                 <h:panelGroup id="display">
-                    <p:panelGrid columns="2" rendered="#{institucionesController.selected != null}">
+                    <div class="ui-fluid">
+                    <p:panelGrid columns="2" rendered="#{institucionesController.selected != null}" layout="grid" styleClass="ui-panelgrid-blank">                       
                         <p:outputLabel value="#{bundle.InstitucionesLabel_idinstitucion}" for="idinstitucion" />
                         <p:inputText id="idinstitucion" value="#{institucionesController.selected.idinstitucion}" title="#{bundle.InstitucionesTitle_idinstitucion}" required="true" requiredMessage="#{bundle.InstitucionesRequiredMessage_idinstitucion}" disabled="true"/>
                         <p:outputLabel value="#{bundle.InstitucionesLabel_nombre}" for="nombre" />
@@ -36,6 +37,7 @@
                                            itemValue="#{idorganismoItem}"/>  
                         </p:selectOneMenu>
                     </p:panelGrid>
+                    </div>
                     <p:commandButton actionListener="#{institucionesController.update}" value="#{bundle.Save}" update="display,:InstitucionesListForm:datalist,:growl" oncomplete="handleSubmit(args, 'InstitucionesEditDialog');"/>
                 </h:panelGroup>
             </h:form>
