--- a/src/main/webapp/vistas/instituciones/List.xhtml
+++ b/src/main/webapp/vistas/instituciones/List.xhtml
@@ -16,47 +16,53 @@
         <ui:define name="body">
             <h:form id="InstitucionesListForm">
                 <p:panel header="#{bundle.ListInstitucionesTitle}">
-                    <p:dataTable id="datalist" value="#{institucionesController.items}" var="item"
+                    <p:contextMenu for="datalist"> 
+                        <p:menuitem id="createButton"   value="#{bundle.Create}"    icon="ui-icon-plus"     update=":InstitucionesCreateForm"    oncomplete="PF('InstitucionesCreateDialog').show()" actionListener="#{institucionesController.prepareCreate}" />
+                        <p:menuitem id="editButton"     value="#{bundle.Edit}"      icon="ui-icon-pencil"   update=":InstitucionesEditForm"      oncomplete="PF('InstitucionesEditDialog').show()"/>
+                        <p:menuitem id="viewButton"     value="#{bundle.View}"      icon="ui-icon-search"   update=":InstitucionesViewForm"      oncomplete="PF('InstitucionesViewDialog').show()"/>                       
+                    </p:contextMenu>
+                    <p:dataTable widgetVar="datalist" id="datalist" value="#{institucionesController.items}" var="item"
                                  selectionMode="single" selection="#{institucionesController.selected}"
                                  paginator="true"
                                  rowKey="#{item.idinstitucion}"
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"
                                  >
-
-                        <p:ajax event="rowSelect"   update="createButton viewButton editButton"/>
-                        <p:ajax event="rowUnselect" update="createButton viewButton editButton"/>
-
+                        <f:facet name="header">
+                            <p:commandButton value="#{bundle.Create}"    icon="ui-icon-plus"     update=":InstitucionesCreateForm"/>
+                        </f:facet>
                         <p:column width="5%">
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.InstitucionTitle}"/>
                             </f:facet>
                             <h:outputText value="#{item.idinstitucion}"/>
-                        </p:column>                     
-                        <p:column width="25%">
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.InstitucionesTitle_idorganismo}"/>
+                        </p:column>
+                        <p:column headerText="#{bundle.OrganismosTitle_iddependencia}" width="12%" filterBy="#{item.idorganismo.iddependencia.siglas}" filterMatchMode="exact" footerText="#{bundle.FilterExact}">
+                            <f:facet name="filter">
+                                <p:selectOneMenu onchange="PF('datalist').filter()" >
+                                    <f:selectItem itemLabel="Select One" itemValue="#{null}" noSelectionOption="true" />
+                                    <f:selectItems value="#{dependenciasController.itemsAvailableSelectOne}" 
+                                                   var="iddependenciaItem" 
+                                                   itemLabel="#{iddependenciaItem.siglas}" itemValue="#{iddependenciaItem.siglas}"/>
+                                </p:selectOneMenu>                         
                             </f:facet>
+                            <h:outputText value="#{item.idorganismo.iddependencia.siglas}"/>
+                        </p:column>
+                        <p:column headerText="#{bundle.InstitucionesTitle_idorganismo}" width="15%">                   
                             <h:outputText value="#{item.idorganismo.nombre}"/>
                         </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.InstitucionesTitle_nombre}"/>
-                            </f:facet>
+                        <p:column headerText="#{bundle.InstitucionesTitle_nombre}" filterBy="#{item.nombre}" filterMatchMode="contains" footerText="#{bundle.FilterContains}">
                             <h:outputText value="#{item.nombre}"/>
                         </p:column>
-                        <p:column width="20%">
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.InstitucionesTitle_tipo}"/>
+                        <p:column headerText="#{bundle.InstitucionesTitle_tipo}" width="20%" filterBy="#{item.tipo}" filterMatchMode="exact" footerText="#{bundle.FilterExact}">
+                            <f:facet name="filter">
+                                <p:selectOneMenu onchange="PF('datalist').filter()" >
+                                    <f:selectItem itemLabel="Select One" itemValue="#{null}" noSelectionOption="true" />
+                                    <f:selectItems value="#{institucionesController.tipo}" />
+                                </p:selectOneMenu>                         
                             </f:facet>
                             <h:outputText value="#{item.tipo}"/>
                         </p:column>
-                        
-                        <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{institucionesController.prepareCreate}" update=":InstitucionesCreateForm" oncomplete="PF('InstitucionesCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":InstitucionesViewForm" oncomplete="PF('InstitucionesViewDialog').show()" disabled="#{empty institucionesController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":InstitucionesEditForm" oncomplete="PF('InstitucionesEditDialog').show()" disabled="#{empty institucionesController.selected}"/>                           
-                        </f:facet>
                     </p:dataTable>
                 </p:panel>
             </h:form>
