--- a/src/main/webapp/vistas/personas/Crear.xhtml
+++ b/src/main/webapp/vistas/personas/Crear.xhtml
@@ -14,7 +14,7 @@
                         <p:panel header="#{bundle.DetallesPanel}">
                             <div class="ui-fluid">
                             <p:messages closable="true"/>
-                            <p:panelGrid columns="2" layout="grid">                                 
+                            <p:panelGrid columns="2" layout="grid" styleClass="ui-panelgrid-blank">                                 
                                 <p:outputLabel value="#{bundle.DependenciaLabel}" for="iddependencia" />
                                 <h:outputText id="iddependencia" value="#{personasController.selected.idinstitucion.idorganismo.iddependencia.siglas}" title="#{bundle.PersonasTitle_dependencia}"/>                                             
                                 
@@ -31,7 +31,7 @@
                         <p:panel header="#{bundle.DetallesPanel}">
                             <div class="ui-fluid">
                             <p:messages closable="true"/>
-                            <p:panelGrid columns="4" layout="grid" columnClasses="ui-grid-col-4,ui-grid-col-10,ui-grid-col-4,ui-grid-col-10">
+                            <p:panelGrid columns="4" layout="grid" columnClasses="ui-grid-col-4,ui-grid-col-10,ui-grid-col-4,ui-grid-col-10" styleClass="ui-panelgrid-blank">
 
                                     <p:outputLabel value="#{bundle.PersonasLabel_tipo}" for="tipo" />
                                     <p:selectOneMenu id="tipo" value="#{personasController.selected.tipo}">                     
@@ -71,7 +71,7 @@
                     <p:tab id="tabImagen" title="#{bundle.ImagenesTitle}">
                         <div class="ui-fluid">
                         <p:panel header="#{bundle.ImagenesPanel}" >
-                            <p:panelGrid columns="5" style="text-align:center" > 
+                            <p:panelGrid columns="5" style="text-align:center" styleClass="ui-panelgrid-blank"> 
                                 <p:fileUpload label="#{bundle.PersonasTitle_foto}" update="nombrefoto" allowTypes="/(\.|\/)(gif|jpe?g|png)$/"  fileUploadListener="#{personasController.subirFoto}" auto="true" >
                                     <p:commandLink update="nombrefoto"  actionListener="#{personasController.quitarFoto()}">
                                         <p:graphicImage id="nombrefoto" title="#{bundle.MessageQuitarImagen}" value="#{gestoresController.getImgMini(personasController.selected.foto)}" cache="false" styleClass="imageSubir"/>                                     
